--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -86,7 +86,7 @@ const nextHref = nextPost ? `/blog/${nextPost.slug}` : '';
         <footer class="post-footer">
           {similarPosts.length > 0 && (
             <section class="similar-posts">
-              <h2>Similar posts</h2>
+              <h2>Related posts</h2>
               <div class="similar-posts-grid">
                 {similarPosts.map((post) => (
                   <PostCard
