--- a/src/pages/blog/ssr-ascii-not-feasible.astro
+++ b/src/pages/blog/ssr-ascii-not-feasible.astro
@@ -2,7 +2,7 @@
 const to = '/blog/better-ascii-animations-with-webgl/';
 ---
 
-<html lang="en">
+<html lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content={`0; url=${to}`} />
