--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -2,9 +2,10 @@
 import Navigation from './Navigation';
 
 const currentPath = Astro.url.pathname;
+const basePath = import.meta.env.BASE_URL;
 ---
 
-<Navigation client:load currentPath={currentPath} />
+<Navigation client:load currentPath={currentPath} basePath={basePath} />
 
 <style is:global>
   .navigation {
