--- a/src/pages/blog/ssr-ascii-not-feasible.astro
+++ b/src/pages/blog/ssr-ascii-not-feasible.astro
@@ -1,5 +1,6 @@
 ---
-const to = '/blog/better-ascii-animations-with-webgl/';
+import { withBase } from '@/lib/utils';
+const to = withBase('/blog/better-ascii-animations-with-webgl/');
 ---
 
 <html lang="en-GB">
